Fixing profile picture alignment

--- a/public/sass/_profile.scss
+++ b/public/sass/_profile.scss
@@ -23,6 +23,10 @@
 
     }
 
+    .picture {
+        text-align: center;
+    }
+
     .expertise {
         margin-bottom: 6px !important;
     }
